bug: fixed family image expanding too much

--- a/sass/layout/_family.scss
+++ b/sass/layout/_family.scss
@@ -9,7 +9,7 @@
   align-items: center;
 
   &__image {
-    flex-basis: 50%;
+    width: 50%;
   }
 
   &__text {
